--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@
   padding: 0;
   list-style-type: none;
   font-family: 'montserrat';
+  font-size: 18px;
 }
 
 body {
@@ -21,7 +22,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background-color: #c3f9e7fe;
+  background-color: #e9fbf4fe;
 }
 
 header {
@@ -61,6 +62,7 @@ main {
 }
 
 .mensagem {
+  font-size: 18px;
   background-color: #040e29;
   color: #fff;
   width: 85%;
